--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-type=
-host=
-port=
-username=
-password=
-database=
+# App
+PORT=
+
+# Database 
+DB_TYPE=
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
