--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -4,6 +4,10 @@ on:
   push:
     tags:
       - "v*.*.*"
+    branches:
+      - master
+    paths-ignore:
+      - '**.md'
 
 jobs:
   docker:
@@ -12,15 +16,26 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+      - 
+        name: Set environment name
+        id: set_env_name
+        run: |
+          echo ::set-output name=ENV_NAME::${{startsWith(github.ref, 'refs/tags/v') && 'prod' || 'staging' }}
+      - 
+        name: Set release tag
+        id: set_release_tag
+        run: |
+          echo ::set-output name=RELEASE_TAG::${{steps.set_env_name.outputs.ENV_NAME == 'prod' && '-RELEASE' || 'STAGING'}}
       -
         name: Docker meta
         id: meta
         uses: docker/metadata-action@v3
         with:
           images: minimicrowave/bs-api
+          tags: |
+            type=raw, value={{tag}}${{steps.set_release_tag.outputs.RELEASE_TAG }}
       -
         name: Login to DockerHub
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
@@ -30,6 +45,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
