--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -1,10 +1,8 @@
 name: Quality Gate
 env:
      CI: false
-on:
-  push:
-    branches-ignore:
-      - main
+on: [ push ]
+
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
