fix: fix branch name

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,5 +19,5 @@ jobs:
             'minimicrowave',
             'booking-system-cf',
             'workflows/test.yml',
-            'main'
+            'master'
           });
