--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
       name: Deploy Stage
       uses: actions/github-script@v5
       with:
+        github-token: ${{ secrets.GH_PAT }}
         script: |
           await github.rest.actions.createWorkflowDispatch({
             'minimicrowave',
