--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,8 @@ jobs:
         github-token: ${{ secrets.GH_PAT }}
         script: |
           await github.rest.actions.createWorkflowDispatch({
-            'minimicrowave',
-            'booking-system-cf',
-            'workflows/test.yml',
-            'master'
+            owner: 'minimicrowave',
+            repo: 'booking-system-cf',
+            workflow_id: 'workflows/test.yml',
+            ref: 'master'
           });
